[package]
authors = ["Christoph Herzog <chris@theduke.at>"]
categories = ["external-ffi-bindings"]
description = "QuickJS Javascript Engine FFI bindings"
documentation = "https://docs.rs/quickjs-sys"
edition = "2018"
keywords = ["quickjs"]
license = "MIT"
name = "libquickjs-sys"
readme = "README.md"
repository = "https://github.com/theduke/quickjs-rs"
version = "0.7.0"

build = "build.rs"

[features]
bignum = ["bundled"]
bundled = ["cc", "copy_dir"]
default = ["bundled", "bignum"]
dump_leaks = ["bundled"]
patched = ["bundled"]

system = ["bindgen"]

[build-dependencies]
bindgen = {version = "0.54.0", optional = true}
cc = {version = "1.0", optional = true}
copy_dir = {version = "0.1.2", optional = true}
